# core

./: .env.forge  .gitignore  .levitate.yaml  =1.0.0  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  DEVELOPMENT.md  README.md  SAFETY_DEMO.md  WP_PATH_AUDIT_REPORT.md  agents.md  backend_curr.py  backend_prev.py  debug_multi_inspector.py  debug_solver.py  demo_safety.py  docker-compose.forge.yml  final_bandit_verification.py  final_comprehensive_test.py  final_test.py  final_validation.py  final_verification.py  fix_backend.py  levitate.yml  manual_fix_report.py  pyproject.toml  recent_logs_v22_8_18.txt  rerooter.pt  security_test.py  simple_test.py  temp_powerinfer_fix.py  temp_rerooter.py  test_current_fibonacci.py  test_export.pt  test_hillium_backend.py  test_implementation.py  test_import.py  test_imports.py  test_powerinfer_mock.py  (+18 more)
.cargo/: config.toml
archive_transient/drafts/: backend.py  backend_fix_instructions.txt  temp_cognitive_safety.rs
crates/aegis_core/: Cargo.toml
crates/aegis_core/src/: lib.rs  scoring_tests.rs  soft_scores.rs  soft_scores_tests.rs  validation.rs  values.rs  verification_tests.rs  visual_validation.rs
crates/aegis_core/src/layer7/: cognitive_safety.rs  mod.rs  test_visual_validator.rs  validation.rs  visual_validator.rs
crates/aegis_core/src/layer7_cognitive_safety/: integration.rs  mod.rs  visual_validator.rs
crates/aegis_core/src/visual/: mod.rs  tests.rs  validator.rs
crates/associative_core/: Cargo.toml
crates/consolidation/: Cargo.toml
crates/fibonacci_math/: Cargo.toml  debug_import.py  pyproject.toml  validate_implementation.py
crates/fibonacci_math/python/: __init__.py  bindings.py
crates/fibonacci_math/src/: constants.rs  fibonacci_heap.rs  golden_constants.rs  golden_kalman.rs  kalman.rs  lib.rs  logarithmic_spiral.rs  main.rs  spiral.rs
crates/fibonacci_math/tests/: integration_test.rs  integration_tests.rs  test_fibonacci_math.py  test_fibonacci_math_comprehensive.py  test_mathematical_correctness.py
crates/hillium_backend/: Cargo.toml
crates/hillium_backend/src/: lib.rs
crates/hillium_hal/: Cargo.toml
crates/hillium_vr/: Cargo.toml
crates/hillium_vr/src/: haptic_bridge.rs  hrec_writer.rs  lib.rs  mock_data.rs  openxr_bridge.rs  shared_types.rs  syntax_verify.rs  vr_bridge.rs  webrtc_bridge.rs  zenoh_bridge.rs
crates/hillium_vr/tests/: bridge_test.rs  integration_test.rs
crates/hrec/: Cargo.toml  hrec.fbs  test_writer_roundtrip.hrec
crates/hrec/src/: header.rs  lib.rs  quality.rs  reader.rs  stream.rs  writer.rs
crates/powerinfer-rs/: Cargo.toml  build.rs
crates/powerinfer_ffi/: Cargo.toml
crates/restrav_detector/: Cargo.toml
crates/restrav_detector/src/: lib.rs  tests.rs
crates/working_memory/: Cargo.toml
crates/working_memory/benches/: working_memory_bench.rs
crates/working_memory/src/: lib.rs
docs/: DOCKERFILE_CHANGES.md  MVP_AUDIT_REPORT.md  melodi_compressor.md  soft_scoring_framework.md  v18.6.1_forge_fix_final.md
hillium_backend/: Cargo.toml
hillium_vr/: __init__.py
hipposerver/: Cargo.toml
hipposerver/src/: lib.rs  main.rs  telemetry.rs  watchdog.rs
hipposerver/src/shm/: allocator.rs  allocator_test.rs  layout.rs  manager.rs  mod.rs  state.rs
hipposerver/tests/: shm_validation.rs  test_telemetry.rs
loqus_core/: __init__.py  config.md  hippo.py  main.py  melodi_compressor.py  models_manifest.json  pyproject.toml  router.py
loqus_core/aura/: ears.py  voice.py
loqus_core/cognitive_council/: __init__.py  alignment_monitor.py  multi_inspector.py  multi_inspector_fixed.py  the_solver.py  the_solver.py.backup  the_solver.py.bak  the_solver_simple.py
loqus_core/council/: core.py
loqus_core/gym/: __init__.py  aggregator.py  simulator.py  trainer.py
loqus_core/inference/: README.md  __init__.py  backend.py  manager.py  manager.py.bak  powerinfer_backend.py  powerinfer_backend_impl.py  powerinfer_backend_wrapper.py  powerinfer_ffi.py
loqus_core/inference/powerinfer_backend/: Cargo.toml  __init__.py  lib.rs  main.py  powerinfer_ffi.py
loqus_core/memory/: __init__.py  beliefs.py  beliefs.py.backup  compression.py  compression.py.backup  compression_updated.py  continuum.py  memory_bank.py
loqus_core/motor/: __init__.py  __init__new.py  controller.py  rerooter.py  rerooter_fixed.py  rerooter_network.py  root_lts_planner.py
loqus_core/observability/: __init__.py  parquet_export.py  query_engine.py  query_engine.py.backup
loqus_core/reasoning/: __init__.py  depth_calculator.py  reasoning_engine.py
loqus_core/routing/: __init__.py  bandit_router.py  bandit_router_final.py  bandit_router_fixed.py  bandit_router_new.py  test_bandit_router.py  test_bandit_router_final.py
loqus_core/safety/: __init__.py  layer7.py  safety_monitor.py
loqus_core/schemas/: action_plan.py
loqus_core/skills/: schema.py
loqus_core/synapps/: runtime.py  sys_info.py
loqus_core/whoiam/: engine.py
motor_cortex/: Cargo.toml  build.rs
personas/: jarvis.json
scripts/: forge_diagnose.py  setup_dev.sh  verify_loqus_recovery.py  verify_recovery.py
solver_env/: pyvenv.cfg
solver_venv/: pyvenv.cfg
tests/: debug_inspectors.py  hillium_vr.py  integration_test_council.py  powerinfer_backend.py  reproduce_docker_sync_lag.py  simple_test.py  soft_scoring_test.rs  temp_test.py  test_alignment_monitor.py  test_bandit_router.py  test_beliefs.py  test_cognitive_safety_integration.py  test_compression.py  test_fibonacci_math.py  test_imports.py  test_inference.py  test_inference_backend.py  test_inference_backend_new.py  test_inspectors.py  test_integration.py  test_melodi_compressor.py  test_multi_inspector.py  test_multi_inspector_fixed.py  test_powerinfer_backend.py  test_powerinfer_backend_jetson.py  test_powerinfer_simple.py  test_query_engine.py  test_rerooter.py  test_rerooter_integration.py  test_rerooter_network.py  test_rerooter_simple.py  test_restrav_implementation.py  test_restrav_integration.py  test_the_solver.py  test_visual_validator.py  test_visual_validator_integration.py  test_vr_bridge.py  verify_implementation.py  verify_restrav_implementation.py
(+66 files in other folders)
