[workspace]
members = [
    "hipposerver",
    "hillium_backend",
    "motor_cortex",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Hillium Labs <team@hillium.ai>"]
license = "MIT"
repository = "https://github.com/hillium-ai/core"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
