[workspace]
resolver = "2"
members = [
    "crates/aegis_core",
    "crates/associative_core",
    "crates/consolidation",
    "crates/hillium_backend",
    "crates/hillium_hal",
    "crates/powerinfer-rs",
    "crates/powerinfer_ffi",
    "crates/powerinfer_ffi_new",
    "crates/working_memory",
    "hipposerver",
    "motor_cortex",
]

[workspace.package]
version = "8.0.0"
edition = "2021"
authors = ["Hillium Team"]
description = "HilliumOS Core - v8.0 Titan Architecture"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
sled = "0.34"
rkyv = "0.7"
shared_memory = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pyo3 = { version = "0.20", features = ["extension-module"] }

hipposerver = { path = "hipposerver" }
working_memory = { path = "crates/working_memory" }
associative_core = { path = "crates/associative_core" }
aegis_core = { path = "crates/aegis_core" }
