[package]
name = "hipposerver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hipposerver"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
sled.workspace = true
rkyv.workspace = true
shared_memory.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
