[project]
name = "loqus-core"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "langchain>=0.1",
    "llama-cpp-python>=0.2.0",
    "pyaudio>=0.2.11",
    "torch>=2.0.0",
    "faster-whisper>=0.9.0",
    "silero-vad>=2.1.0",
    "webrtcvad>=2.0.10",
]
