[package]
name = "aegis_core"
version.workspace = true
edition.workspace = true

[dependencies]
hipposerver = { path = "../../hipposerver" }
log.workspace = true
anyhow.workspace = true
serde = { version = "1.0", features = ["derive"] }
restrav_detector = { path = "../restrav_detector" }
pyo3 = { version = "0.20", features = ["extension-module"] }

[features]
visual-validation = ["restrav_detector"]

