[package]
name = "hillium_backend"
version.workspace = true
edition.workspace = true

[lib]
name = "hillium_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
tokio.workspace = true
anyhow.workspace = true
hipposerver.workspace = true
working_memory.workspace = true
associative_core.workspace = true
