[package]
name = "hillium_vr"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = "0.11"
tokio = { version = "1.35", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }

tempfile = "3"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["cdylib", "rlib"]