[package]
name = "working_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

[dev-dependencies]
criterion = "0.5" 

[[bench]]
name = "working_memory_bench"
harness = false
