[package]
name = "working_memory"
version.workspace = true
edition.workspace = true

[dependencies]
sled.workspace = true
bincode.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
tempfile = "3.0"

[dev-dependencies]
criterion = "0.5" 

[[bench]]
name = "working_memory_bench"
harness = false
